develop/istio/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bank-gateway
  namespace: bank-namespace
spec:
  selector:
    istio: ingressgateway # Istio Ingress Gateway를 사용
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "team1-bank.lion.nyhhs.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: "acm-cert"
    hosts:
    - "team1-bank.lion.nyhhs.com"
